--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COSMOS</title>
   </head>
+  <style>
+    body, html {
+      height: 100%;
+    }
+    #root {
+      height: 100%;
+    }
+  </style>
   <body>
     <div id="root"></div>
     <div id="modal"></div>
