[FEAT] favicon 추가

--- a/FE/S08P31D201/index.html
+++ b/FE/S08P31D201/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COSMOS</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <title>디텍토</title>
   </head>
   <style>
     body, html {
