[FEAT] 메타 태그 추가

--- a/FE/S08P31D201/index.html
+++ b/FE/S08P31D201/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://detecto.kr/">
+    <meta property="og:title" content="디텍토를 사용하세요">
+    <meta property="og:site_name" content="디텍토">
+    <meta property="og:description" content="디텍토의 보호구 미착용자 감지, 실시간 알림 서비스, 위반자 관리 패널, 실시간 모니터링를 통해 근무지의 안전 상황을 실시간 점검하고 관리하여 더 나은 근무 환경을 제공하세요">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:image" content="https://detecto.kr/hero.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="manifest" href="/manifest.json">
     <title>디텍토</title>
